--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 		<title>my test page</title>
 		<link href="styles/style.css" rel="stylesheet" type="text/css">
     </head>
-    <h1>Khon Kaen University</h1>
+	<h1>Khon Kaen University</h1>
+	
 	<body>
-		<img src="images/kku.jpg"  alt="My test image">
-    </body>
+		<img src="images/kku.jpg" height="50%" width="50%" alt="My test image">
+	</body>
+	
 	<p>Khon kaen University has many outstanding places</p>
 	<ul>
 		<li>ศาลเจ้าพ่อมอดินแดง</li>
